--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <h1>Minh Toan Nguyen</h1>
     <img src="./minhtoannguyen.jpg" alt="Minh Toan Nguyen">
-    <ol>
-        <li>lab 1 - Home page</li>
-        <li>lab 2</li>
-        <li>lab 3</li>
-        <li>lab 4</li>
-        <li>lab 5</li>
-    </ol>
-    <a href="https://minhtoannguyenit.github.io/waplabs/"> </a><img src="./htmlchecker.png" alt="HTML Checker"> </a>
+    <ul>
+        <li><a href="#"> 1 - Home page</a></li>
+        <li><a href="#"> lab 2</a></li>
+        <li><a href="#"> lab 3</a></li>
+        <li><a href="#"> lab 4</a></li>
+        <li><a href="#"> lab 5</a></li>
+    </ul>
+    <a href="https://minhtoannguyenit.github.io/waplabs/"><img src="./htmlchecker.png" alt="HTML Checker"> </a>
 </body>
 </html>
