--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <li><a href="#"> lab 4</a></li>
         <li><a href="#"> lab 5</a></li>
     </ul>
-    <a href="https://minhtoannguyenit.github.io/waplabs/"><img src="./htmlchecker.png" alt="HTML Checker"> </a>
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fminhtoannguyenit.github.io%2Fwaplabs%2F"><img src="./htmlchecker.png" alt="HTML Checker"> </a>
 </body>
 </html>
