Assign 2 - about me

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./minhtoannguyen.jpg" alt="Minh Toan Nguyen">
     <ul>
         <li><a href="#"> 1 - Home page</a></li>
-        <li><a href="#"> lab 2</a></li>
+        <li><a href="/about/aboutme.html"> lab 2 - About me</a></li>
         <li><a href="#"> lab 3</a></li>
         <li><a href="#"> lab 4</a></li>
         <li><a href="#"> lab 5</a></li>
