--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styleme.css">
+    <link rel="stylesheet" href="./about/styleme.css">
 </head>
 <body>
     <h1>Minh Toan Nguyen</h1>
@@ -24,8 +24,8 @@
         <li>Star Wars <a href="https://www.imdb.com/">(IMDB)</a></li>
     </ol>
     <h2>My moods:</h2>
-    <span><strong>Happy:<strong><img src= "./happy1.jpg"></span>
-    <span><strong>Happy:<strong><img src= "./happy2.jpg"></span>
+    <span><strong>Happy:<strong><img src= "./about/happy1.jpg"></span>
+    <span><strong>Happy:<strong><img src= "./about/happy2.jpg"></span>
     <h2>Fun facts about My neighbors</h2>
     <ul>
         <li>Duy Truong (Cris): love to playing football</li>
@@ -33,12 +33,12 @@
     </ul>
     <span>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fminhtoannguyenit.github.io%2Fwaplabs%2F">
-            <img src="./html_checker.png" alt="HTML Checker"> 
+            <img src="./about/html_checker.png" alt="HTML Checker"> 
         </a>
     </span>
     <span>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fminhtoannguyenit.github.io%2Fwaplabs%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-            <img src="./css_checker.png" alt="CSS Checker">
+            <img src="./about/css_checker.png" alt="CSS Checker">
         </a>
     </span>
     
